feat(reserva): implementa nova lógica de reservas recorrentes com série única
Substitui o modelo legado de recorrência (que criava N registros filhos
vinculados por reserva_pai_id) por um modelo de série única com expansão
dinâmica de ocorrências.

Principais mudanças:

- Adiciona campo isSerie na entidade SolicitacaoReserva para identificar
  séries recorrentes
- Cria tabela excecao_recorrencia para registrar alterações em ocorrências
  individuais (cancelamento, reagendamento, aprovação parcial)
- Implementa CriarSolicitacaoReserva com suporte a recorrência diária,
  semanal e mensal, gerando um único registro de série por solicitação
- Implementa ObterRecorrenciaInfo para expandir dinamicamente as ocorrências
  de uma série com base nas regras de recorrência e exceções registradas
- Implementa AtualizarOcorrenciaReserva para criar/atualizar exceções em
  ocorrências específicas sem afetar as demais da série
- Atualiza ObterHorariosOcupados para considerar séries na geração do
  calendário de horários ocupados
- Atualiza ObterEstatisticasEspacos e ObterEstatisticasEquipamentos para
  contabilizar ocorrências de séries no período analisado
- Remove completamente o modelo legado: campo reservaPaiId, queries de
  busca por pai/filha e toda lógica de criação de registros filhos

BREAKING CHANGE: reservaPaiId removido da entidade e da API de resposta.
Reservas recorrentes agora são identificadas pelo campo isSerie=true e
gerenciadas via /solicitacao-reserva/{id}/ocorrencias/excecao.